bitbybit-tests/tests/ui/range_value_is_array.stderr
error: custom attribute panicked
 --> tests/ui/range_value_is_array.rs:3:1
  |
3 | #[bitenum(u8, exhaustive: false)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: bitenum!: range attribute argument must be a range
